--- a/package.json
+++ b/package.json
@@ -11,17 +11,23 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
     "lint": "eslint . --fix",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "docs": "typedoc"
   },
   "dependencies": {
-    "@tailwindcss/forms": "^0.5.9",
+    "@vueuse/core": "^12.3.0",
+    "axios": "^1.7.9",
+    "crypto-js": "^4.2.0",
     "pinia": "^2.3.0",
     "vue": "^3.5.13",
+    "vue-i18n": "^10.0.5",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.1",
+    "@tailwindcss/forms": "^0.5.9",
     "@tsconfig/node22": "^22.0.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.10.2",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/eslint-config-prettier": "^10.1.0",
@@ -34,7 +40,10 @@
     "npm-run-all2": "^7.0.2",
     "postcss": "^8.4.49",
     "prettier": "^3.3.3",
+    "sass": "^1.83.1",
     "tailwindcss": "^3.4.17",
+    "terser": "^5.37.0",
+    "typedoc-plugin-vue": "^1.3.0",
     "typescript": "~5.6.3",
     "vite": "^6.0.5",
     "vite-plugin-vue-devtools": "^7.6.8",
