--- a/package.json
+++ b/package.json
@@ -5,16 +5,19 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "rimraf dist && run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "test:e2e": "playwright test",
     "build-only": "vite build",
     "type-check": "vue-tsc --build",
-    "lint": "eslint . --fix",
+    "lint:fix": "eslint . --fix",
     "format": "prettier --write src/",
     "docs": "typedoc"
   },
   "dependencies": {
+    "@fontsource-variable/open-sans": "^5.1.1",
+    "@fontsource/source-sans-pro": "^5.1.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@vueuse/core": "^12.3.0",
     "axios": "^1.7.9",
     "crypto-js": "^4.2.0",
@@ -29,17 +32,19 @@
     "@tsconfig/node22": "^22.0.0",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.10.2",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "@typescript-eslint/parser": "^8.18.1",
     "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/eslint-config-prettier": "^10.1.0",
-    "@vue/eslint-config-typescript": "^14.1.3",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "^9.14.0",
-    "eslint-plugin-playwright": "^2.1.0",
-    "eslint-plugin-vue": "^9.30.0",
+    "eslint": "^9.17.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-vue": "^9.32.0",
     "npm-run-all2": "^7.0.2",
     "postcss": "^8.4.49",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.2",
+    "rimraf": "^6.0.1",
     "sass": "^1.83.1",
     "tailwindcss": "^3.4.17",
     "terser": "^5.37.0",
@@ -47,6 +52,7 @@
     "typescript": "~5.6.3",
     "vite": "^6.0.5",
     "vite-plugin-vue-devtools": "^7.6.8",
+    "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.1.10"
   }
 }
