--- a/package.json
+++ b/package.json
@@ -17,18 +17,20 @@
   "dependencies": {
     "@fontsource-variable/open-sans": "^5.1.1",
     "@fontsource/source-sans-pro": "^5.1.0",
+    "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
-    "@vueuse/core": "^12.3.0",
-    "axios": "^1.7.9",
-    "crypto-js": "^4.2.0",
-    "pinia": "^2.3.0",
-    "vue": "^3.5.13",
-    "vue-i18n": "^10.0.5",
-    "vue-router": "^4.5.0"
+    "@vueuse/core": "12.3.0",
+    "axios": "1.7.9",
+    "crypto-js": "4.2.0",
+    "idb": "^8.0.1",
+    "pinia": "2.3.0",
+    "tailwindcss": "^3.4.17",
+    "vue": "3.5.13",
+    "vue-i18n": "10.0.5",
+    "vue-router": "4.5.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.49.1",
-    "@tailwindcss/forms": "^0.5.9",
     "@tsconfig/node22": "^22.0.0",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^22.10.2",
@@ -46,7 +48,6 @@
     "prettier": "^3.4.2",
     "rimraf": "^6.0.1",
     "sass": "^1.83.1",
-    "tailwindcss": "^3.4.17",
     "terser": "^5.37.0",
     "typedoc-plugin-vue": "^1.3.0",
     "typescript": "~5.6.3",
